# src/utils/swagger/swagger.json
@@ -502,6 +502,31 @@
       }
     },
     "/api/hives/data/{id}": {
+      "get": {
+        "tags": [
+          "HiveData"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
       "delete": {
         "tags": [
           "HiveData"
@@ -526,6 +551,28 @@
       }
     },
     "/api/hives/data/all/{hiveId}": {
+      "get": {
+        "tags": [
+          "HiveData"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "hiveId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
       "delete": {
         "tags": [
           "HiveData"
